# Hodini

./: README.md  platformio.ini
driver/: .gitignore  CMakeLists.txt  hodini  hodini.nix  main.cpp
src/: Config.h  main.cpp
